--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "formik": "^2.4.5",
     "i18next": "^23.7.13",
     "i18next-browser-languagedetector": "^7.2.0",
+    "jspdf": "^2.5.1",
     "lord-icon-element": "^4.1.2",
     "moment": "^2.30.1",
     "next": "^13.5.6",
@@ -63,6 +64,7 @@
     "react-icons": "^4.12.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.24.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
