--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.10.2",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
